fix overflow with scroll and remove flex wrap to keep the design and layout

--- a/css/catalog.css
+++ b/css/catalog.css
@@ -559,6 +559,10 @@ input[type="range"]:focus::-webkit-slider-thumb {
     outline: 4px solid #3892F3;
 }
 
+.catalog-box {
+    min-width: 325px;
+}
+
 .catalog-container {
     position: relative;
     display: grid;
@@ -623,7 +627,7 @@ input[type="range"]:focus::-webkit-slider-thumb {
     font-size: 20px;
     line-height: 26px;
     margin-bottom: 0;
-    text-wrap: nowrap;
+    text-wrap: wrap;
 }
 
 .box__description {
