--- a/css/contacts.css
+++ b/css/contacts.css
@@ -4,7 +4,6 @@
 
 .content__wraper {
     display: flex;
-    flex-wrap: wrap;
     gap: 40px;
     align-items: flex-end;
     margin-bottom: 120px;
